Added LMDB Binding project

--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,7 @@ LICENSE file.
     <module>solr</module>
     <module>tarantool</module>
     <!--<module>voldemort</module>-->
+    <module>lmdb</module>
   </modules>
 
   <build>
