--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -131,6 +131,11 @@ LICENSE file.
     </dependency>
     <dependency>
       <groupId>com.yahoo.ycsb</groupId>
+      <artifactId>lmdb-binding</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.yahoo.ycsb</groupId>
       <artifactId>kudu-binding</artifactId>
       <version>${project.version}</version>
     </dependency>
